--- a/prepros.cfg
+++ b/prepros.cfg
@@ -261,6 +261,26 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "55abba52": {
+          "id": "55abba52",
+          "path": "Sass/queries.scss",
+          "output": "css/queries.css",
+          "name": "queries.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "498ab7e1"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
