--- a/prepros.cfg
+++ b/prepros.cfg
@@ -281,6 +281,35 @@
             "498ab7e1"
           ],
           "type": "sass"
+        },
+        "50ef0fa9": {
+          "id": "50ef0fa9",
+          "path": "js/main.js",
+          "output": "js/main-dist.js",
+          "name": "main.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "47277e15": {
+          "id": "47277e15",
+          "path": "img/fb.png",
+          "output": "img/fb.png",
+          "name": "fb.png",
+          "category": "IMAGE",
+          "size": 1129,
+          "type": "png",
+          "initialSize": 1129,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
