--- a/prepros.cfg
+++ b/prepros.cfg
@@ -298,15 +298,80 @@
           "parents": [],
           "type": "javascript"
         },
+        "1da3eff4": {
+          "id": "1da3eff4",
+          "path": "img/inst.png",
+          "output": "img/inst.png",
+          "name": "inst.png",
+          "category": "IMAGE",
+          "size": 706,
+          "type": "png",
+          "initialSize": 706,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "47277e15": {
           "id": "47277e15",
           "path": "img/fb.png",
           "output": "img/fb.png",
           "name": "fb.png",
           "category": "IMAGE",
-          "size": 1129,
+          "size": 420,
           "type": "png",
-          "initialSize": 1129,
+          "initialSize": 420,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "efe792ea": {
+          "id": "efe792ea",
+          "path": "img/gp.png",
+          "output": "img/gp.png",
+          "name": "gp.png",
+          "category": "IMAGE",
+          "size": 892,
+          "type": "png",
+          "initialSize": 892,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "58ad9d99": {
+          "id": "58ad9d99",
+          "path": "img/pin.png",
+          "output": "img/pin.png",
+          "name": "pin.png",
+          "category": "IMAGE",
+          "size": 925,
+          "type": "png",
+          "initialSize": 925,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bf9f1c4e": {
+          "id": "bf9f1c4e",
+          "path": "img/share.png",
+          "output": "img/share.png",
+          "name": "share.png",
+          "category": "IMAGE",
+          "size": 655,
+          "type": "png",
+          "initialSize": 655,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6abbec7d": {
+          "id": "6abbec7d",
+          "path": "img/tw.png",
+          "output": "img/tw.png",
+          "name": "tw.png",
+          "category": "IMAGE",
+          "size": 754,
+          "type": "png",
+          "initialSize": 754,
           "optimized": false,
           "height": 0,
           "width": 0
